<resources>
    <!--应用名称-->
    <string name="app_name">终端控制器</string>

    <!--common start-->
    <string name="menu">菜单</string>
    <string name="device">设备</string>
    <string name="set">设置</string>
    <string name="log">日志</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="open">开启</string>
    <string name="close">关闭</string>
    <string name="save">保存</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">天</string>
    <string name="hour">时</string>
    <string name="minute">分</string>
    <string name="second">秒</string>
    <!--common end-->

    <!--测试字符串 start-->
    <string name="hello_world">Hello World</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="test_hello_blank_textview_1">Hello blank textview 1</string>
    <string name="test_hello_blank_textview_2">Hello blank textview 2</string>
    <string name="test_hello_blank_textview_3">Hello blank textview 3</string>

    <string name="test_btn_1">btn 1</string>
    <string name="test_btn_2">btn 2</string>
    <string name="test_btn_3">btn 3</string>
    <!--测试字符串 end-->


    <!--设置页面 start-->
    <string name="setup_general">通用</string>
    <string name="setup_general_backup">备份</string>
    <string name="setup_general_restore">恢复</string>
    <string name="setup_log">日志</string>
    <string name="setup_log_switch">总开关</string>
    <string name="setup_log_level">日志级别</string>
    <string name="setup_log_keep_day">保留天数</string>

    <string-array name="logLevel">
        <item>VERBOSE</item>
        <item>DEBUG</item>
        <item>INFO</item>
        <item>WARN</item>
        <item>ERROR</item>
    </string-array>
    <!--设置页面 end-->


    <!-- 首页 底部导航栏 start-->
    <string name="title_bottom_nav_menu_device">设备</string>
    <string name="title_bottom_nav_menu_log">日志</string>
    <string name="title_bottom_nav_menu_set">设置</string>
    <!-- 首页 底部导航栏 end-->


    <!--设备 start-->
    <!--添加设备 start-->
    <string name="device_add_type_select">选择设备类型</string>
    <!--添加设备 end-->

    <!--添加icon start-->
    <string name="icon_select_title">选择图标</string>
    <!--添加icon end-->

    <!--开关设置页面 start-->
    <string name="power_switch_set_iconChange">更换图标</string>
    <string name="power_switch_set_paramSet">参数设置</string>
    <string name="power_switch_set_logView">日志</string>

    <string name="power_switch_set_paramSet_open">开</string>
    <string name="power_switch_set_paramSet_close">关</string>
    <!--开关设置页面 end-->
    <!--设备 end-->
</resources>