<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/device_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.device.DeviceActivity">

    <RelativeLayout
        android:id="@+id/device_activity_rl"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/device_btn1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test_btn_1">

        </Button>

        <TextView
            android:id="@+id/device_tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test_hello_blank_textview_1"/>

        <TextView
            android:id="@+id/device_tv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/device_tv1"
            android:text="@string/test_hello_blank_textview_2"/>

        <TextView
            android:id="@+id/device_tv3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/device_tv2"
            android:text="@string/test_hello_blank_textview_3"/>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>